@@ -7,6 +7,7 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import pharma.Controller.subpanel.Dettagli;
 import pharma.Controller.subpanel.Lotti;
@@ -25,63 +26,79 @@ import java.time.LocalDate;
 import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.*;
 
 class LottiDaoTest {
-    private  Database database;
+    private Database database;
     private LottiDao lottiDao;
+
     @BeforeEach
-    public void setUp(){
-        database= Mockito.mock(pharma.config.Database.class);
-        lottiDao=new LottiDao(database,"lotto");
+    public void setUp() {
+        database = Mockito.mock(pharma.config.Database.class);
+        lottiDao = new LottiDao(database, "lotto");
 
     }
+
     @Test
     public void ValidInsert() throws SQLException {
-        PreparedStatement preparedStatement=Mockito.mock(PreparedStatement.class);
+        PreparedStatement preparedStatement = Mockito.mock(PreparedStatement.class);
 
 
-        FieldData fieldData=FieldData.FieldDataBuilder.getbuilder().setLotto_id("b9188j").setTipologia(1).
-                setProduction_date(Date.valueOf(LocalDate.of(2024,10,10))).
-               setElapsed_date(Date.valueOf(LocalDate.of(2025,10,01))).
-                setPrice(20.00).setVat_percent(10).setQuantity(100).build();
-        Mockito.when(preparedStatement.executeUpdate()).thenReturn(1);
-        Mockito.when(database.execute_prepared_query(Mockito.anyString())).thenReturn(preparedStatement);
+        FieldData fieldData = FieldData.FieldDataBuilder.getbuilder().setLotto_id("b9188j").setTipologia(1).
+                setProduction_date(Date.valueOf(LocalDate.of(2024, 10, 10))).
+                setElapsed_date(Date.valueOf(LocalDate.of(2025, 10, 01))).build();
+        when(preparedStatement.executeUpdate()).thenReturn(1);
+        when(database.execute_prepared_query(anyString())).thenReturn(preparedStatement);
         Assertions.assertTrue(lottiDao.insert(fieldData));
-        Mockito.verify(database).execute_prepared_query("INSERT INTO lotto (id,farmaco,production_date,elapsed_date,price,vat_percent,quantity) VALUES(?,?,?,?,?,?,?)  ");
-        Mockito.verify(preparedStatement).setString(1,"b9188j");
-        Mockito.verify(preparedStatement).setInt(2,1);
-        Mockito.verify(preparedStatement).setDate(3,Date.valueOf(LocalDate.of(2024,10,10)));
-        Mockito.verify(preparedStatement).setDate(4,Date.valueOf(LocalDate.of(2025,10,01)));
-        Mockito.verify(preparedStatement).setDouble(5,20.00);
-        Mockito.verify(preparedStatement).setInt(6,10);
-        Mockito.verify(preparedStatement).setInt(7,100);
+        verify(database).execute_prepared_query("INSERT INTO lotto (id,farmaco,production_date,elapsed_date) VALUES(?,?,?,?)");
+        verify(preparedStatement).setString(1, "b9188j");
+        verify(preparedStatement).setInt(2, 1);
+        verify(preparedStatement).setDate(3, Date.valueOf(LocalDate.of(2024, 10, 10)));
+        verify(preparedStatement).setDate(4, Date.valueOf(LocalDate.of(2025, 10, 01)));
+
 
     }
+
     @Test
     public void ValidFindAll() throws SQLException {
-        ResultSet resultSet=Mockito.mock(ResultSet.class);
-        Mockito.when(database.executeQuery(Mockito.anyString())).thenReturn(resultSet);
-        Mockito.when(resultSet.next()).thenReturn(true,false);
-        Mockito.when(resultSet.getString("id")).thenReturn("aaa");
-        Mockito.when(resultSet.getDate("production_date")).thenReturn( Date.valueOf(LocalDate.of(2024,10,01)));
-        Mockito.when(resultSet.getDate("elapsed_date")).thenReturn( Date.valueOf(LocalDate.of(2025,10,01)));
-        Mockito.when(resultSet.getInt("quantity")).thenReturn(300);
-        Mockito.when(resultSet.getString("nome")).thenReturn("Tachipirina");
-        Mockito.when(resultSet.getString("tipologia")).thenReturn("Compresse");
-        Mockito.when(resultSet.getString("misura")).thenReturn("100mg");
-        Mockito.when(resultSet.getString("casa_farmaceutica")).thenReturn("Angelini");
-        Mockito.when(resultSet.getDouble("price")).thenReturn(6.50);
+        ResultSet resultSet = Mockito.mock(ResultSet.class);
+        when(database.executeQuery(anyString())).thenReturn(resultSet);
+        when(resultSet.next()).thenReturn(true, false);
+        when(resultSet.getString("id")).thenReturn("aaa");
+        when(resultSet.getDate("production_date")).thenReturn(Date.valueOf(LocalDate.of(2024, 10, 01)));
+        when(resultSet.getDate("elapsed_date")).thenReturn(Date.valueOf(LocalDate.of(2025, 10, 01)));
+        when(resultSet.getInt("quantity")).thenReturn(300);
+        when(resultSet.getString("nome")).thenReturn("Tachipirina");
+        when(resultSet.getString("tipologia")).thenReturn("Compresse");
+        when(resultSet.getString("misura")).thenReturn("100mg");
+        when(resultSet.getString("casa_farmaceutica")).thenReturn("Angelini");
+        when(resultSet.getDouble("price")).thenReturn(6.50);
         List<FieldData> fieldData = lottiDao.findAll();
-        Assertions.assertEquals("Tachipirina",fieldData.get(0).getNome());
-       Mockito.verify(resultSet).getString("id");
-        Mockito.verify(resultSet).getDate("production_date");
-        Assertions.assertEquals(Date.valueOf(LocalDate.of(2024,10,01)),fieldData.getFirst().getProduction_date());
-        Assertions.assertEquals(Date.valueOf(LocalDate.of(2025,10,01)),fieldData.getFirst().getElapsed_date());
-        Assertions.assertEquals(300,fieldData.getFirst().getQuantity());
-        Assertions.assertEquals("Tachipirina",fieldData.getFirst().getNome());
-        Assertions.assertEquals("Compresse",fieldData.getFirst().getNome_tipologia());
-        Assertions.assertEquals("100mg",fieldData.getFirst().getUnit_misure());
-        Assertions.assertEquals(6.50,fieldData.getFirst().getPrice());
+        Assertions.assertEquals("Tachipirina", fieldData.get(0).getNome());
+        verify(resultSet).getString("id");
+        verify(resultSet).getDate("production_date");
+        Assertions.assertEquals(Date.valueOf(LocalDate.of(2024, 10, 01)), fieldData.getFirst().getProduction_date());
+        Assertions.assertEquals(Date.valueOf(LocalDate.of(2025, 10, 01)), fieldData.getFirst().getElapsed_date());
+        Assertions.assertEquals(300, fieldData.getFirst().getQuantity());
+        Assertions.assertEquals("Tachipirina", fieldData.getFirst().getNome());
+        Assertions.assertEquals("Compresse", fieldData.getFirst().getNome_tipologia());
+        Assertions.assertEquals("100mg", fieldData.getFirst().getUnit_misure());
+        Assertions.assertEquals(6.50, fieldData.getFirst().getPrice());
+
+    }
+
+    @Test
+    void ValidFindByName() throws SQLException {
+        ResultSet resultSet = Mockito.mock(ResultSet.class);
+
+        when(resultSet.next()).thenReturn(true, true, true, false);
+        when(resultSet.getString(1)).thenReturn("Angelini", "Bayer", "Angelini");
+        when(database.executeQuery(anyString())).thenReturn(resultSet);
+
+        List<String> list = lottiDao.FindByFarmacoNameHaveLot();
+        Assertions.assertEquals("Angelini", list.getFirst());
+
 
     }
 
@@ -89,7 +106,7 @@ class LottiDaoTest {
     @AfterEach
     public void tearDown() {
         database = null;
-        lottiDao=null;
+        lottiDao = null;
     }
 
     @Test
@@ -99,7 +116,7 @@ class LottiDaoTest {
         try {
             properties = FileStorage.getProperties_real(new ArrayList<>(Arrays.asList("host", "username", "password")), new FileReader("database.properties"));
             lottiDao = new LottiDao(Database.getInstance(properties), "lotto");
-           List<FieldData> lotti=lottiDao.findAll();
+            List<FieldData> lotti = lottiDao.findAll();
             System.out.println(lotti.getFirst().getLotto_id());
 
         } catch (FileNotFoundException e) {
@@ -108,6 +125,7 @@ class LottiDaoTest {
             throw new RuntimeException(e);
         }
     }
+
     @Test
     public void ValidIntegrationInsert() {
         Properties properties = null;
@@ -115,11 +133,11 @@ class LottiDaoTest {
         try {
             properties = FileStorage.getProperties_real(new ArrayList<>(Arrays.asList("host", "username", "password")), new FileReader("database.properties"));
             lottiDao = new LottiDao(Database.getInstance(properties), "lotto");
-             boolean value=lottiDao.insert(FieldData.FieldDataBuilder.getbuilder().setLotto_id("aaa").setTipologia(60).
-                    setProduction_date(Date.valueOf(LocalDate.of(2024,10,01)))
-                     .setElapsed_date(Date.valueOf(LocalDate.of(2025,01,9))).setQuantity(100).setPrice(10.50).setQuantity(300).build());
+            boolean value = lottiDao.insert(FieldData.FieldDataBuilder.getbuilder().setLotto_id("aaa").setTipologia(60).
+                    setProduction_date(Date.valueOf(LocalDate.of(2024, 10, 01)))
+                    .setElapsed_date(Date.valueOf(LocalDate.of(2025, 01, 9))).build());
 
-        Assertions.assertTrue(value);
+            Assertions.assertTrue(value);
         } catch (FileNotFoundException e) {
             throw new RuntimeException(e);
         } catch (IOException e) {
@@ -128,7 +146,61 @@ class LottiDaoTest {
     }
 
 
+    @Test
+    void findLotsByFarmacoName() throws SQLException {
+
+        PreparedStatement preparedStatement = Mockito.mock(PreparedStatement.class);
+        ResultSet resultSet = Mockito.mock(ResultSet.class);
+        when(resultSet.next()).thenReturn(true, true, false);
+        when(resultSet.getString(1)).thenReturn("agk1", "agk4");
+        when(preparedStatement.executeQuery()).thenReturn(resultSet);
+        when(database.execute_prepared_query(anyString())).thenReturn(preparedStatement);
+        List<String> value = lottiDao.findLotsByFarmacoName(anyString());
+        Assertions.assertEquals("agk1", value.getFirst());
+        Assertions.assertEquals("agk4", value.get(1));
+
+    }
+
+    @Test
+    void findLotsbyPharma() throws SQLException {
+        PreparedStatement preparedStatement = Mockito.mock(PreparedStatement.class);
+
+        ArgumentCaptor<Integer> paramCaptor = ArgumentCaptor.forClass(Integer.class);
+        when(database.execute_prepared_query(anyString())).thenReturn(preparedStatement);
+
+        doNothing().when(preparedStatement).setInt(eq(1), paramCaptor.capture());
+        when(preparedStatement.executeQuery()).thenAnswer(invocation -> {
+
+          int argument = paramCaptor.getValue();
+            ResultSet resultSet = Mockito.mock(ResultSet.class);
+                    if (argument==1) {
+                when(resultSet.next()).thenReturn(true, true, true, true, false);
+                when(resultSet.getString("id")).thenReturn("agk1", "agk2", "agk3", "agk4");
+                when(resultSet.getDate("production_date")).thenReturn(
+                        Date.valueOf(LocalDate.of(2026, 10, 01)),
+                        Date.valueOf(LocalDate.of(2024, 10, 01)),
+                        Date.valueOf(LocalDate.of(2025, 10, 01)),
+                        Date.valueOf(LocalDate.of(2023, 10, 01))
+                );
+                when(resultSet.getDate("elapsed_date")).thenReturn(
+                        Date.valueOf(LocalDate.of(2027, 10, 01)),
+                        Date.valueOf(LocalDate.of(2028, 10, 01)),
+                        Date.valueOf(LocalDate.of(2029, 10, 01)),
+                        Date.valueOf(LocalDate.of(2030, 10, 01)));
+                when(resultSet.getString("nome")).thenReturn("Amuchina", "Moment", "Moment_Act", "Tachipirina");
+                when(resultSet.getString("tipologia")).thenReturn("Supposte", "Compresse", "Compresse", "Compresse");
+                when(resultSet.getString("misura")).thenReturn("100mg", "10gr", "30gr", "40gr");
+                when(resultSet.getString("casa_farmaceutica")).thenReturn("Angelini");
+                when(resultSet.getInt("farmaco")).thenReturn(1, 2, 3, 4);
 
 
+            }
+            return resultSet;
+        });
 
+        List<FieldData> fieldData = lottiDao.findLotsbyPharma(1);
+        Assertions.assertEquals(4, fieldData.size());
+
+
+    }
 }
